# ecs_disease_models

./: .gitignore  Cargo.toml  KeyConcepts.md  Notes.md  Readme.md
examples/basic-infection/: incidence_reporter.rs  infection_manager.rs  main.rs  population_statistics.rs  transmission_manager.rs
examples/epi-isolation/: main.rs  parameters.rs  periodic_reporter.rs  person.rs  population_loader.rs
examples/epi-isolation/input/: input.json
src/: errors.rs  lib.rs  model.rs  module.rs  random.rs  report.rs  timeline.rs  timeline_event.rs
